--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-# AutoCAD temp files
+# AutoCAD files
 *.bak
 *.dwl
 *.dwl2
 *.ac$
 *.sv$
 *_recover.dwg
+*.dwg
+*.dxf
 
 # Windows
 Thumbs.db
@@ -13,3 +15,5 @@ Desktop.ini
 # Old/backup folders
 Old/
 OLD/
+WorkFiles/
+
